<resources>
    <string name="app_name">Betreuer-App</string>
    <string name="thesis_details_title">Abschlussarbeit Details</string>
    <string name="people">Personen</string>
    <string name="status_management">Status &amp; Verwaltung</string>
    <string name="thesis_status">Thesis-Status</string>
    <string name="billing_status">Rechnungsstatus</string>
    <string name="billing_status_none">Keine Rechnung</string>
    <string name="billing_status_issued">Rechnung erstellt</string>
    <string name="billing_status_paid">Bezahlt</string>
    <string name="billing_status_unknown">Unbekannter Rechnungsstatus</string>
    <string name="download_expose">Exposé herunterladen</string>
    <string name="edit">Bearbeiten</string>
    <string name="subject_area_icon_description">Fachbereich Icon</string>
    <string name="add_second_supervisor">Zweitkorrektor hinzufügen</string>

    <!-- Thesis Status Translations -->
    <string name="status_in_discussion">In Abstimmung</string>
    <string name="status_registered">Angemeldet</string>
    <string name="status_submitted">Abgegeben</string>
    <string name="status_defended">Kolloquium abgehalten / Benotet</string>
    <string name="status_waiting_for_tutor">Warte auf Betreuerzusage</string>
    <string name="status_created">Erstellt</string>
    <string name="status_in_coordination">In Abstimmung</string>
    <string name="toast_need_expose">Statuswechsel nicht möglich: Bitte zuerst das Exposé hochladen.</string>
    <string name="toast_need_second_examiner">Statuswechsel nicht möglich: Bitte zuerst eine:n Zweitgutachter:in zuordnen.</string>
    <string name="toast_not_allowed">Statuswechsel nicht möglich.</string>
    <string name="confirm_defended_status_change">Status zu „Kolloquium abgehalten / Benotet“ ändern?</string>
    <string name="review_request_error_subject_area_mismatch">Anfrage konnte nicht gesendet werden: Der Betreuer gehört nicht zum gewählten Fachbereich.</string>
    <string name="review_request_error_generic">Fehler beim Senden der Anfrage</string>
    <string name="review_request_error_duplicate_request">Für diese Abschlussarbeit existiert bereits eine Betreuungsanfrage.</string>
    <string name="review_request_error_not_owner">Nur der Eigentümer der Abschlussarbeit kann eine Betreuungsanfrage stellen.</string>
    <string name="review_request_error_receiver_not_tutor">Die ausgewählte Person ist kein Betreuer.</string>
    <string name="review_request_error_same_supervisor">Der Zweitbetreuer darf nicht identisch mit dem Hauptbetreuer sein.</string>
    <string name="contact_tutor_button">Kontakt aufnehmen</string>
    <string name="contact_tutor_title">Kontakt aufnehmen</string>
    <string name="contact_tutor_email_label">E-Mail-Adresse</string>
    <string name="contact_tutor_email_write">E-Mail schreiben</string>
    <string name="contact_tutor_email_copy">E-Mail kopieren</string>
    <string name="contact_tutor_no_email_toast">Keine E-Mail-Adresse hinterlegt.</string>
    <string name="contact_tutor_no_email_app">Keine E-Mail-App gefunden.</string>
    <string name="contact_tutor_email_copied">E-Mail-Adresse kopiert.</string>
    <string name="contact_tutor_missing_email">Keine E-Mail-Adresse hinterlegt</string>
    <string name="contact_tutor_email_subject">Betreuung Abschlussarbeit – Anfrage</string>
    <string name="contact_tutor_email_body_intro">Hallo %1$s,\n\nich möchte Sie bezüglich einer Betreuung meiner Abschlussarbeit kontaktieren. Mein Exposé sende ich Ihnen im Anhang / separat.\n\n</string>
    <string name="contact_tutor_email_thesis_id">Abschlussarbeit-ID: %1$s</string>
    <string name="contact_tutor_email_body_outro">Viele Grüße</string>
    <string name="contact_tutor_fallback_name">Tutor</string>
    <string name="thesis_page_previous">Zurück</string>
    <string name="thesis_page_next">Weiter</string>
    <string name="thesis_page_indicator">Seite %1$d / %2$d</string>
    <string name="thesis_page_indicator_placeholder">Seite 1 / 1</string>
    <string name="thesis_list_load_error_with_code">Fehler beim Laden der Abschlussarbeiten (Code: %1$d)</string>
    <string name="thesis_list_load_error_network">Netzwerkfehler beim Laden der Abschlussarbeiten</string>
</resources>
